[gd_scene load_steps=8 format=3 uid="uid://b5gw1bas5h0or"]

[ext_resource type="Script" uid="uid://xut5r4s3kx3f" path="res://content/ui/zone_progress/zone_progress.gd" id="1_hffu7"]

[sub_resource type="Animation" id="Animation_j83pc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel/ZoneProgressBar:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(152, -30)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(120.5, 4)]
}

[sub_resource type="Animation" id="Animation_egpbp"]
resource_name = "go_in"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(120.5, -23), Vector2(120.5, 4)]
}

[sub_resource type="Animation" id="Animation_hffu7"]
resource_name = "go_out"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(120.5, 4), Vector2(120.5, -23)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3vmtj"]
_data = {
&"RESET": SubResource("Animation_j83pc"),
&"go_in": SubResource("Animation_egpbp"),
&"go_out": SubResource("Animation_hffu7")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_18nlu"]
bg_color = Color(0.57878286, 0.7007463, 0.9489892, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c1pb6"]
bg_color = Color(0.2915069, 0.45853937, 0.83534163, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="ZoneProgress" type="Control"]
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
script = ExtResource("1_hffu7")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_3vmtj")
}
autoplay = "RESET"

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -119.5
offset_top = 4.0
offset_right = 119.5
offset_bottom = 21.0
grow_horizontal = 2

[node name="ZoneNameLabel" type="Label" parent="Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -39.0
offset_top = -6.5
offset_right = 39.0
offset_bottom = 6.5
grow_horizontal = 2
grow_vertical = 2
text = "Starting Zone"

[node name="ZoneProgressBar" type="ProgressBar" parent="Panel"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 32.5
offset_top = -38.5
offset_right = 229.5
offset_bottom = -21.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_18nlu")
theme_override_styles/fill = SubResource("StyleBoxFlat_c1pb6")
value = 50.0
show_percentage = false
